# open-research-data

./: README.md
genesis/: pyproject.toml
genesis/analysis/: analysis.R  analysis.py  analysis_results.csv
genesis/ga_hybrid_100/: README.md
genesis/ga_hybrid_100/12_0.1_False_10_0.5/: data.csv  experiment.txt
genesis/ga_hybrid_100/12_0.1_False_10_1/: data.csv  experiment.txt
genesis/ga_hybrid_100/12_0.1_False_10_2/: data.csv  experiment.txt
genesis/ga_hybrid_100/12_0.1_False_5_0.5/: data.csv  experiment.txt
genesis/ga_hybrid_100/12_0.1_False_5_1/: data.csv  experiment.txt
genesis/ga_hybrid_2000/: README.md
genesis/gaha/: README.md
genesis/gda/: 12_0.1_False_10_0.5.txt  12_0.1_False_10_1.txt  12_0.1_False_10_2.txt  12_0.1_False_5_0.5.txt  12_0.1_False_5_1.txt  12_0.1_False_5_2.txt  12_0.1_True_10_0.5.txt  12_0.1_True_10_1.txt  12_0.1_True_10_2.txt  12_0.1_True_5_0.5.txt  12_0.1_True_5_1.txt  12_0.1_True_5_2.txt  12_0.2_False_10_0.5.txt  12_0.2_False_10_1.txt  12_0.2_False_10_2.txt  12_0.2_False_5_0.5.txt  12_0.2_False_5_1.txt  12_0.2_False_5_2.txt  12_0.2_True_10_0.5.txt  12_0.2_True_10_1.txt  12_0.2_True_10_2.txt  12_0.2_True_5_0.5.txt  12_0.2_True_5_1.txt  12_0.2_True_5_2.txt  8_0.1_False_10_0.5.txt  8_0.1_False_10_1.txt  8_0.1_False_10_2.txt  8_0.1_False_5_0.5.txt  8_0.1_False_5_1.txt  8_0.1_False_5_2.txt  8_0.1_True_10_0.5.txt  8_0.1_True_10_1.txt  8_0.1_True_10_2.txt  8_0.1_True_5_0.5.txt  8_0.1_True_5_1.txt  8_0.1_True_5_2.txt  8_0.2_False_10_0.5.txt  8_0.2_False_10_1.txt  8_0.2_False_10_2.txt  8_0.2_False_5_0.5.txt  (+8 more)
genesis/genesis/: README.md
(+37596 files in other folders)
