[tool.poetry]
name = "genesis_experiments"
version = "0.1.0"
description = ""
authors = ["Theviyanthan Krishnamohan"]
package-mode = false
packages = [{include = "analysis"}]

[tool.poetry.dependencies]
python = ">=3.12"
polars = "^1.33.1"
numpy = "^2.3.3"
matplotlib = "^3.10.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyse = "analysis.analysis:run"
